--- a/examples/ajax/twitter-lms.html
+++ b/examples/ajax/twitter-lms.html
@@ -1,6 +1,8 @@
 <html>
 <head><title>Twitter</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" tpe="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
+<script src="twitter_.js" type="text/javascript"></script>
+<script>$(document).ready(loadTweets)</script>
 </head>
 <body>
 <div id="jstwitter">
