--- a/examples/ajax/twitter.html
+++ b/examples/ajax/twitter.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Twitter</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" tpe="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 <script src="twitter.js" type="text/javascript"></script>
 </head>
 <body>
