--- a/src/main/webapp/gen.html
+++ b/src/main/webapp/gen.html
@@ -6,6 +6,7 @@
    <link rel="stylesheet" href="mice.css" type="text/css" />
  </head>
  <body onLoad="main();">
+   <canvas id="canvas" style="width:800px; height:600px;"></canvas>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
    <script src="mice_.js"></script>
  </body>
